--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,6 +31,7 @@ RoxygenNote: 7.3.2
 Imports:
     httr2,
     jsonlite
-Suggests: 
+Suggests:
+    httptest2,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
