--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,5 +33,6 @@ Imports:
     jsonlite
 Suggests:
     httptest2,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    withr
 Config/testthat/edition: 3
