--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,8 +29,10 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Imports:
+    dplyr,
     httr2,
-    jsonlite
+    jsonlite,
+    rlang
 Suggests:
     httptest2,
     testthat (>= 3.0.0),
