Add functions to get one/all parties

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,12 @@
 export(canonicalize_names)
 export(get_all_community_classifications)
 export(get_all_community_concepts)
+export(get_all_parties)
 export(get_all_plot_observations)
 export(get_all_taxon_observations)
 export(get_community_classification)
 export(get_community_concept)
+export(get_party)
 export(get_plot)
 export(get_plot_observation)
 export(get_taxon_observation)
