Add functions to get one/all projects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,12 +5,14 @@ export(get_all_community_classifications)
 export(get_all_community_concepts)
 export(get_all_parties)
 export(get_all_plot_observations)
+export(get_all_projects)
 export(get_all_taxon_observations)
 export(get_community_classification)
 export(get_community_concept)
 export(get_party)
 export(get_plot)
 export(get_plot_observation)
+export(get_project)
 export(get_taxon_observation)
 export(get_vb_base_url)
 export(set_vb_base_url)
