Add functions to control API request debug level
This commit includes exported functions to set/unset API debug mode, and
an internal function for getting the current debug level (aka verbosity,
following `httr2` usage), but doesn't actually include any functionality
that _uses_ it (despite what the docs say at this point).

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,5 +16,7 @@ export(get_project)
 export(get_taxon_observation)
 export(get_vb_base_url)
 export(set_vb_base_url)
+export(vb_debug)
+export(vb_undebug)
 import(httr2)
 importFrom(rlang,.data)
