Export and add docs for get_page_details()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(get_all_projects)
 export(get_all_taxon_observations)
 export(get_community_classification)
 export(get_community_concept)
+export(get_page_details)
 export(get_party)
 export(get_plot_observation)
 export(get_plot_observation_details)
