--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,9 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Imports:
+    DBI,
     dplyr,
+    duckdb,
     httr2,
     jsonlite,
     rlang
