--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(canonicalize_names)
 export(get_all_community_classifications)
 export(get_all_community_concepts)
 export(get_all_parties)
+export(get_all_plant_concepts)
 export(get_all_plot_observations)
 export(get_all_projects)
 export(get_all_taxon_observations)
@@ -11,6 +12,7 @@ export(get_community_classification)
 export(get_community_concept)
 export(get_page_details)
 export(get_party)
+export(get_plant_concept)
 export(get_plot_observation)
 export(get_plot_observation_details)
 export(get_project)
@@ -20,4 +22,6 @@ export(set_vb_base_url)
 export(vb_debug)
 export(vb_undebug)
 import(httr2)
+importFrom(rlang,"!!")
+importFrom(rlang,":=")
 importFrom(rlang,.data)
