Add functions to get one/all cover methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(canonicalize_names)
 export(get_all_community_classifications)
 export(get_all_community_concepts)
+export(get_all_cover_methods)
 export(get_all_parties)
 export(get_all_plant_concepts)
 export(get_all_plot_observations)
@@ -10,6 +11,7 @@ export(get_all_projects)
 export(get_all_taxon_observations)
 export(get_community_classification)
 export(get_community_concept)
+export(get_cover_method)
 export(get_page_details)
 export(get_party)
 export(get_plant_concept)
