Add functions to get one/all references

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(get_all_parties)
 export(get_all_plant_concepts)
 export(get_all_plot_observations)
 export(get_all_projects)
+export(get_all_references)
 export(get_all_stratum_methods)
 export(get_all_taxon_observations)
 export(get_community_classification)
@@ -19,6 +20,7 @@ export(get_plant_concept)
 export(get_plot_observation)
 export(get_plot_observation_details)
 export(get_project)
+export(get_reference)
 export(get_stratum_method)
 export(get_taxon_observation)
 export(get_vb_base_url)
