Add new vb_get() workhorse function
... and tests. Docs will come later.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(vb_count_references)
 export(vb_count_stratum_methods)
 export(vb_count_taxon_observations)
 export(vb_debug)
+export(vb_get)
 export(vb_undebug)
 import(httr2)
 importFrom(rlang,"!!!")
