--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,6 @@ export(get_all_community_concepts)
 export(get_all_cover_methods)
 export(get_all_parties)
 export(get_all_plant_concepts)
-export(get_all_projects)
 export(get_all_references)
 export(get_all_stratum_methods)
 export(get_all_taxon_observations)
@@ -16,7 +15,6 @@ export(get_cover_method)
 export(get_page_details)
 export(get_party)
 export(get_plant_concept)
-export(get_project)
 export(get_reference)
 export(get_stratum_method)
 export(get_taxon_observation)
@@ -36,6 +34,7 @@ export(vb_count_taxon_observations)
 export(vb_debug)
 export(vb_get)
 export(vb_get_plot_observations)
+export(vb_get_projects)
 export(vb_undebug)
 import(httr2)
 importFrom(rlang,"!!!")
