--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,6 @@ export(canonicalize_names)
 export(get_all_community_classifications)
 export(get_all_community_concepts)
 export(get_all_cover_methods)
-export(get_all_parties)
 export(get_all_plant_concepts)
 export(get_all_references)
 export(get_all_stratum_methods)
@@ -13,7 +12,6 @@ export(get_community_classification)
 export(get_community_concept)
 export(get_cover_method)
 export(get_page_details)
-export(get_party)
 export(get_plant_concept)
 export(get_reference)
 export(get_stratum_method)
@@ -33,6 +31,7 @@ export(vb_count_stratum_methods)
 export(vb_count_taxon_observations)
 export(vb_debug)
 export(vb_get)
+export(vb_get_parties)
 export(vb_get_plot_observations)
 export(vb_get_projects)
 export(vb_undebug)
