--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,6 @@ export(get_all_community_classifications)
 export(get_all_community_concepts)
 export(get_all_cover_methods)
 export(get_all_plant_concepts)
-export(get_all_references)
 export(get_all_stratum_methods)
 export(get_all_taxon_observations)
 export(get_community_classification)
@@ -13,7 +12,6 @@ export(get_community_concept)
 export(get_cover_method)
 export(get_page_details)
 export(get_plant_concept)
-export(get_reference)
 export(get_stratum_method)
 export(get_taxon_observation)
 export(get_vb_base_url)
@@ -34,6 +32,7 @@ export(vb_get)
 export(vb_get_parties)
 export(vb_get_plot_observations)
 export(vb_get_projects)
+export(vb_get_references)
 export(vb_undebug)
 import(httr2)
 importFrom(rlang,"!!!")
