--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,13 +3,11 @@
 export(canonicalize_names)
 export(get_all_community_classifications)
 export(get_all_community_concepts)
-export(get_all_cover_methods)
 export(get_all_plant_concepts)
 export(get_all_stratum_methods)
 export(get_all_taxon_observations)
 export(get_community_classification)
 export(get_community_concept)
-export(get_cover_method)
 export(get_page_details)
 export(get_plant_concept)
 export(get_stratum_method)
@@ -29,6 +27,7 @@ export(vb_count_stratum_methods)
 export(vb_count_taxon_observations)
 export(vb_debug)
 export(vb_get)
+export(vb_get_cover_methods)
 export(vb_get_parties)
 export(vb_get_plot_observations)
 export(vb_get_projects)
