Migrate to vb_get_stratum_methods()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,13 +4,11 @@ export(canonicalize_names)
 export(get_all_community_classifications)
 export(get_all_community_concepts)
 export(get_all_plant_concepts)
-export(get_all_stratum_methods)
 export(get_all_taxon_observations)
 export(get_community_classification)
 export(get_community_concept)
 export(get_page_details)
 export(get_plant_concept)
-export(get_stratum_method)
 export(get_taxon_observation)
 export(get_vb_base_url)
 export(set_vb_base_url)
@@ -32,6 +30,7 @@ export(vb_get_parties)
 export(vb_get_plot_observations)
 export(vb_get_projects)
 export(vb_get_references)
+export(vb_get_stratum_methods)
 export(vb_undebug)
 import(httr2)
 importFrom(rlang,"!!!")
