--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,10 @@
 export(canonicalize_names)
 export(get_all_community_classifications)
 export(get_all_community_concepts)
-export(get_all_plant_concepts)
 export(get_all_taxon_observations)
 export(get_community_classification)
 export(get_community_concept)
 export(get_page_details)
-export(get_plant_concept)
 export(get_taxon_observation)
 export(get_vb_base_url)
 export(set_vb_base_url)
@@ -27,6 +25,7 @@ export(vb_debug)
 export(vb_get)
 export(vb_get_cover_methods)
 export(vb_get_parties)
+export(vb_get_plant_concepts)
 export(vb_get_plot_observations)
 export(vb_get_projects)
 export(vb_get_references)
