Add new vb_get_taxon_interpretations()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(vb_get_plot_observations)
 export(vb_get_projects)
 export(vb_get_references)
 export(vb_get_stratum_methods)
+export(vb_get_taxon_interpretations)
 export(vb_get_taxon_observations)
 export(vb_undebug)
 import(httr2)
