--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(vb_debug)
 export(vb_get)
 export(vb_get_community_classifications)
 export(vb_get_community_concepts)
+export(vb_get_community_interpretations)
 export(vb_get_cover_methods)
 export(vb_get_parties)
 export(vb_get_plant_concepts)
