Rename URL setter/getter to use vb_ prefix
- get_vb_base_url() -> vb_get_base_url()
- set_vb_base_url()) -> vb_set_base_url()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,6 @@
 
 export(canonicalize_names)
 export(get_page_details)
-export(get_vb_base_url)
-export(set_vb_base_url)
 export(vb_count)
 export(vb_count_community_classifications)
 export(vb_count_community_concepts)
@@ -17,6 +15,7 @@ export(vb_count_stratum_methods)
 export(vb_count_taxon_observations)
 export(vb_debug)
 export(vb_get)
+export(vb_get_base_url)
 export(vb_get_community_classifications)
 export(vb_get_community_concepts)
 export(vb_get_community_interpretations)
@@ -29,6 +28,7 @@ export(vb_get_references)
 export(vb_get_stratum_methods)
 export(vb_get_taxon_interpretations)
 export(vb_get_taxon_observations)
+export(vb_set_base_url)
 export(vb_undebug)
 import(httr2)
 importFrom(rlang,"!!!")
