--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: vegbankr
 Title: Interface to the VegBank Vegetation Plot Database
-Version: 0.0.1
+Version: 0.1.0
 Authors@R: c(
     person("Jim", "Regetz",
            email = "regetz@nceas.ucsb.edu",
@@ -19,9 +19,10 @@ Description: Provides a programmatic interface to VegBank, the
     data, community types recognized by the U.S. National Vegetation
     Classification and others, and all ITIS/USDA plant taxa along with
     other taxa recorded in plot records. As a VegBank API client, the
-    'vegbankr' package supports querying, downloading, validating, and
-    uploading vegetation plot records and other supporting information
-    to and from the VegBank database.
+    `vegbankr` package currently supports querying and downloading
+    vegetation plot records and other supporting information from the
+    VegBank database, and will soon support validating and uploading new
+    data to the VegBank database as well.
 License: Apache License (>= 2) | file LICENSE
 URL: https://github.com/NCEAS/vegbankr
 BugReports: https://github.com/NCEAS/vegbankr/issues
